# engine-in-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  hello.c  main.cpp
